ninja commit solves extra white space

--- a/davidmr.es/_sass/custom-style/generics.scss
+++ b/davidmr.es/_sass/custom-style/generics.scss
@@ -38,6 +38,7 @@ footer {
 		.footer-icon {
 			height: 1.5em;
 			width: auto;
+			max-width: 100%;
 			vertical-align: middle;
 			padding: 0 0.3em 0.5em 0;
 			fill: color("grey", "lighten-4");
